Show "missing title" if title not set in Facts

--- a/src/components/Message/AuthorName.css
+++ b/src/components/Message/AuthorName.css
@@ -38,6 +38,10 @@
 	color: var( --hm-medium-grey );
 }
 
+.AuthorName-Card-title.missing {
+	font-style: italic;
+}
+
 .AuthorName-Card-map {
 	width: 150px;
 	height: 150px;
