Add 100ms delay to showing
Moving this from CSS into JS means we can properly transition it. This
avoids incidental mouse movements accidentally triggering the
hovercards, without introducing noticable friction when intentionally
triggering them.

--- a/src/components/Hovercard.css
+++ b/src/components/Hovercard.css
@@ -25,7 +25,7 @@
 .Hovercard-Transition-enter {
 	opacity: 0;
 	transform: translate(0, 20px);
-	animation: hovercard-fade-in-up 0.1s 0.5s ease forwards;
+	animation: hovercard-fade-in-up 0.1s ease forwards;
 }
 
 .Hovercard-Transition-exit {
