--- a/src/components/Hovercard.css
+++ b/src/components/Hovercard.css
@@ -39,14 +39,14 @@
 	color: #000;
 	box-shadow: 0px 0px 4px rgba( 0, 0, 0, 0.4 );
 	padding: 0.777778rem;
-	margin-top: 10px; /* ::before[height] + offset */
+	margin-top: 10px; /* pointer[height] + offset */
 	font-size: 1rem;
 	pointer-events: none;
 	display: flex;
 	flex-direction: column;
 }
 
-.Hovercard-Card::before {
+.Hovercard-Card-pointer {
 	display: block;
 	content: " ";
 	position: absolute;
