--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -2,21 +2,26 @@
 	font-size: 0.8em;
 }
 
-.Profile-closer {
-	display: block;
-	position: sticky;
-	top: 0;
-	background: #fff;
-	padding: 0.5em 0;
-	z-index: 2;
-}
-
 .Profile > header {
 	display: flex;
 	align-items: center;
 	margin: 0 0 1em;
 	padding: 0.2em 0;
 	overflow: hidden;
+}
+
+.Profile .Profile-closer {
+	align-items: baseline;
+	justify-content: space-between;
+	position: sticky;
+	top: 0;
+	background: var( --hm-beige );
+	padding: 0.5em;
+	z-index: 2;
+}
+
+.Profile-closer .btn {
+	margin: 0;
 }
 
 .Profile > header .Avatar {
