--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,12 +1,17 @@
 .Profile {
 	font-size: 0.8em;
+	margin-top: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	border-left: 1px solid var( --hm-beige );
+	border-right: 1px solid var( --hm-beige );
 }
 
 .Profile > header {
 	display: flex;
 	align-items: center;
-	margin: 0 0 1em;
-	padding: 0.2em 0;
+	margin: 0 -1em 1em;
+	padding: 0.2em 1em 0;
 	overflow: hidden;
 }
 
