--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -57,3 +57,16 @@
 .Profile-title.missing {
 	font-style: italic;
 }
+
+.Profile-field {
+	margin: 0 0 0.25em;
+	display: flex;
+}
+.Profile-field > strong:first-child {
+	width: 25%;
+	flex-grow: 0;
+	flex-shrink: 0;
+}
+.Profile-field .missing {
+	font-style: italic;
+}
