--- a/src/components/Header/SiteSelect.css
+++ b/src/components/Header/SiteSelect.css
@@ -1,16 +1,54 @@
-a.SiteSelect {
-	display: flex;
-	align-items: center;
+.SiteSelect {
 	background: var(--hm-red);
-	padding-right: 1em;
 	color: #fff;
 }
 
-.SiteSelect:hover,
-.SiteSelect:focus {
+.SiteSelect > .Dropdown-trigger {
+	display: flex;
+	align-items: center;
+	padding-right: 1em;
+}
+
+.SiteSelect > .Dropdown-trigger:hover,
+.SiteSelect > .Dropdown-trigger:focus {
+	border: none;
+	color: rgba( 255, 255, 255, 0.6 );
+}
+
+.SiteSelect.expanded > .Dropdown-trigger {
+	box-shadow: 0 0 4px rgba( 0, 0, 0, 0.6 );
+}
+
+.SiteSelect .Dropdown-content {
+	background: var( --hm-red );
+	width: auto;
+	min-width: 400px;
+	box-shadow: 0 4px 4px rgba( 0, 0, 0, 0.6 );
+}
+
+.SiteSelect a {
+	color: inherit;
+	display: block;
+	padding: 0.25rem 0 0.25rem 60px;
+}
+.SiteSelect a:link,
+.SiteSelect a:visited {
+	color: inherit;
+}
+.SiteSelect a:hover,
+.SiteSelect a:focus {
+	background: var( --hm-red-dark );
 	border: none;
 }
 
-.SiteSelect:hover {
-	color: rgba( 255, 255, 255, 0.6 );
+.SiteSelect-site-desc {
+	display: block;
+	color: rgba( 255, 255, 255, 0.75 );
+	font-size: 0.875em;
+}
+
+.SiteSelect ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
