Reduce padding between list and navigation

--- a/src/components/Widgets/RecentPosts.css
+++ b/src/components/Widgets/RecentPosts.css
@@ -1,3 +1,7 @@
+.Sidebar .RecentPosts ul {
+	margin-bottom: 0.83333335rem;
+}
+
 .RecentPosts-pagination {
 	display: flex;
 	align-items: baseline;
