--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,6 +1,5 @@
 .Comment {
 	position: relative;
-	/*z-index: 5;*/
 }
 
 .Comment:before {
@@ -38,6 +37,7 @@
 	margin-left: -30px;
 	position: sticky;
 	top: 99px;
+	z-index: 3;
 	background: #fff;
 }
 
