--- a/src/components/Editor/index.css
+++ b/src/components/Editor/index.css
@@ -134,7 +134,7 @@
 .Editor-preview {
 	background-color: #fff;
 	border: 2px solid #d9d9d9;
-	padding: 0 20px;
+	padding: 1rem;
 	margin-bottom: 1.66667rem;
 }
 
