--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,13 +1,4 @@
-.Profile {
-	font-size: 0.8em;
-	margin-top: 1em;
-	padding-left: 1em;
-	padding-right: 1em;
-	border-left: 1px solid var( --hm-beige );
-	border-right: 1px solid var( --hm-beige );
-}
-
-.Profile > header {
+.Profile-header {
 	display: flex;
 	align-items: center;
 	margin: 0 -1em 1em;
@@ -15,25 +6,11 @@
 	overflow: hidden;
 }
 
-.Profile .Profile-closer {
-	align-items: baseline;
-	justify-content: space-between;
-	position: sticky;
-	top: 0;
-	background: var( --hm-beige );
-	padding: 0.5em;
-	z-index: 2;
-}
-
-.Profile-closer .btn {
-	margin: 0;
-}
-
-.Profile > header .Avatar {
+.Profile-header .Avatar {
 	margin-right: 0.5em;
 }
 
-.Profile h2 {
+.Profile-header h2 {
 	text-transform: none;
 	font-size: 1rem;
 	line-height: 1.4;
