Remove errant negative margin on notifications

--- a/src/components/Notification.css
+++ b/src/components/Notification.css
@@ -1,6 +1,6 @@
 .Notification {
 	border-radius: 4px;
-	margin-top: -1.36667rem;
+	margin-top: 0;
 	padding: 1.1em;
 	font-size: 0.777777778em;
 	border: 1px solid currentColor;
