--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -9,6 +9,23 @@
 	padding: 0 20px;
 }
 
+.Header-site-name {
+	background: var(--hm-red);
+	color: #fff;
+	display: flex;
+	align-items: center;
+	padding-right: 1em;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+}
+
+.Header-site-name:hover,
+.Header-site-name:focus {
+	border: none;
+	color: rgba( 255, 255, 255, 0.6 );
+}
+
 .Header .Header-CurrentUser {
 	margin-left: auto;
 	align-self: center;
