--- a/src/components/DropUpload.css
+++ b/src/components/DropUpload.css
@@ -44,6 +44,11 @@ label.DropUpload-uploader {
 	all: unset;
 	margin-right: 0.3em;
 	cursor: pointer;
+	/* Style label text similar to an <a> */
+	color: var( --hm-red );
+}
+.DropUpload-uploader:hover {
+	text-decoration: underline;
 }
 .DropUpload-uploader > input[type=file] {
 	display: none;
