--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -93,27 +93,26 @@ body.admin-bar .Post > header {
 	margin-right: 0;
 }
 
-.Post--long.Post--collapsed .Post-content-wrap {
-	height: 150px;
+.Post--collapsed .Post-content-wrap {
+	min-height: 70px;
+	max-height: 150px;
 	overflow: hidden;
+	position: relative;
 }
-.Post--long.Post--collapsed .Post-content-wrap::after {
+.Post--collapsed .Post-content-wrap::after {
 	display: block;
 	content: ' ';
 	position: absolute;
 	left: 0;
 	bottom: 0;
 	right: 0;
-	height: 150px;
+	height: 100%;
 	background: linear-gradient(
 		to bottom,
 		rgba( 255, 255, 255, 0 ),
 		rgba( 255, 255, 255, 0.9 ) 50%,
 		#fff
 	);
-}
-.Post--short.Post--collapsed .Post-content-wrap {
-	padding-bottom: 50px;
 }
 .Post--collapsed .reactions {
 	display: none;
