Constraint autocomplete to 500px, just in case
This specifically makes the name the spot to overflow, and handles it
via text-overflow to make it a bit nicer.

--- a/src/components/Editor/MentionCompletion.css
+++ b/src/components/Editor/MentionCompletion.css
@@ -1,6 +1,7 @@
 .MentionCompletion-item {
 	display: flex;
 	white-space: nowrap;
+	max-width: 500px;
 }
 
 .MentionCompletion-item .avatar {
@@ -13,6 +14,8 @@
 	margin-left: 0.5em;
 	margin-right: 0.5em;
 	flex-grow: 1;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .MentionCompletion-item .username {
