Implement loader for remote previews

--- a/src/components/Post/Write.css
+++ b/src/components/Post/Write.css
@@ -63,7 +63,7 @@
 	font-size: 14px;
 }
 
-.WritePost .Notification {
+.WritePost > .Notification {
 	margin-left: 90px;
 	margin-top: -1.36667rem;
 }
