--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -93,6 +93,12 @@ body.admin-bar .Post > header {
 	margin-left: 90px;
 }
 
+.Post-footer-actions {
+	display: flex;
+	margin: 1.666rem 0 1.248rem;
+	justify-content: space-between;
+}
+
 .Post .actions button:last-child {
 	margin-right: 0;
 }
@@ -143,8 +149,17 @@ body.admin-bar .Post > header {
 		width: 24px !important;
 		height: 24px !important;
 	}
+	.Post > header > .actions {
+		display: none;
+	}
 
 	.Post-content-wrap {
 		margin-left: 0;
+	}
+}
+
+@media ( min-width: 600px ) {
+	.Post-footer-actions .actions {
+		display: none;
 	}
 }
