--- a/src/plugins/reactions/Reactions.css
+++ b/src/plugins/reactions/Reactions.css
@@ -1,7 +1,10 @@
 .reactions {
+	display: flex;
+}
+
+.Comment .reactions {
 	position: relative;
 	width: 100%;
-	display: flex;
 	margin: 1.666rem 0 1.248rem;
 }
 
