--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -132,7 +132,8 @@ body.admin-bar .Post > header {
 		height: 1.1rem;
 	}
 	.Post > header {
-		padding: 0.5em 0;
+		margin: 0 -20px;
+		padding: 0.5em 20px;
 		height: auto;
 		display: block;
 	}
