--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -104,16 +104,21 @@ body.admin-bar .Comment > header {
 	}
 
 	.Comment:before {
-		left: -33px;
+		left: -20px;
 	}
 	.Comment > header > .Avatar,
 	.Comment > header > .Avatar img {
-		height: 32px !important;
-		width: 32px !important;
+		height: 24px !important;
+		width: 24px !important;
 	}
 	.Comment > header > .Avatar {
-		margin-left: -48px;
-		margin-right: 15px;
+		margin-left: -30px;
+		margin-right: 6px;
+		padding: 8px 0;
+		background: #fff;
+	}
+	.Comment > header .Avatar:after {
+		top: 8px;
 	}
 
 	.Comment > header .actions-wrap,
