Adjust editor for mobile

--- a/src/components/Post/Write.css
+++ b/src/components/Post/Write.css
@@ -71,3 +71,13 @@
 .WritePost > .Editor {
 	margin-left: 90px;
 }
+
+@media ( max-width: 600px ) {
+	.WritePost > header > .Avatar {
+		display: none;
+	}
+
+	.WritePost > .Editor {
+		margin-left: 0;
+	}
+}
