--- a/src/components/Header/Logo.css
+++ b/src/components/Header/Logo.css
@@ -10,3 +10,12 @@
 	width: 1.5rem;
 	height: 1.5rem;
 }
+
+@media ( max-width: 600px ) {
+	.Logo {
+		width: 45px;
+	}
+	.Logo .hm-logo {
+		margin-left: 5px;
+	}
+}
