--- a/src/plugins/reactions/Reactions.css
+++ b/src/plugins/reactions/Reactions.css
@@ -101,3 +101,18 @@
 	height: 1em;
 	max-height: 1em;
 }
+
+.reactions-picker-wrap {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 10;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgb(79, 70, 65, 0.7);
+	backdrop-filter: blur( 2px );
+}
