Further separate comment header styling

--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -50,14 +50,8 @@ body.admin-bar .Comment .Comment-Header {
 	padding-bottom: 1rem;
 }
 
-.Comment .Comment-date {
-	color: var( --hm-medium-grey );
-	font-size: 0.75em;
-	margin-right: 0.5em;
-}
-.Comment a.Comment-date:hover {
-	border: none;
-	text-decoration: underline;
+.Comment:hover > .Comment-Header .actions-wrap {
+	display: flex;
 }
 
 .Comment-footer-actions {
