--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,3 +1,9 @@
+.Profile-navigation {
+	list-style: none;
+	margin: 1rem 0;
+	padding: 0;
+}
+
 .Profile-field {
 	margin: 0 0 0.25em;
 	display: flex;
