--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -135,7 +135,8 @@ body.admin-bar .Post > header {
 		display: block;
 	}
 	.Post > header > .Avatar {
-		margin-right: 8px;
+		margin-left: 8px;
+		margin-right: 0;
 		float: right;
 	}
 	.Post > header > .Avatar,
