--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ body.admin-bar .App > .Outer > aside {
 
 @media ( min-width: 800px ) {
 	body.admin-bar .App > .Outer > aside {
-		height: calc( -32px + 100vh );
+		height: calc( 100vh - 32px );
 	}
 }
 
