--- a/src/components/SuperMenu.css
+++ b/src/components/SuperMenu.css
@@ -66,6 +66,11 @@
 	padding: 0;
 }
 
+.SuperMenu ul ul {
+	margin-left: 1em;
+	margin-bottom: 0;
+}
+
 @media ( min-width: 600px ) {
 	.SuperMenu__content .SearchInput {
 		display: none;
