--- a/src/components/SuperMenu.css
+++ b/src/components/SuperMenu.css
@@ -19,6 +19,7 @@
 
 .SuperMenu header {
 	margin: -1rem -20px 1rem;
+	flex-shrink: 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
