Update header stickiness to adapt to menu bar changes
The values we used to choose the `top` and heights of sticky elements are
outdated _vs_ what the WordPress admin bar looks like today, which results
in a poor experience using H2 on phones or small screens. This updates to
account for two major changes:

- WP admin bar is not sticky below 600px
- WP admin bar is 46px, not 48, on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -60,20 +60,22 @@
 	}
 }
 
-body.admin-bar .App > .Outer > aside {
-	top: 32px;
+@media screen and ( min-width: 600px ) and ( max-width: 782px ) {
+	body.admin-bar .App > .Outer > aside {
+		top: 46px;
+		height: calc( 100vh - 46px );
+	}
+}
+
+@media ( min-width: 783px ) {
+	body.admin-bar .App > .Outer > aside {
+		top: 32px;
+	}
 }
 
 @media ( min-width: 800px ) {
 	body.admin-bar .App > .Outer > aside {
 		height: calc( 100vh - 32px );
-	}
-}
-
-@media screen and ( max-width: 782px ) {
-	body.admin-bar .App > .Outer > aside {
-		top: 48px;
-		height: calc( 100vh - 48px );
 	}
 }
 
