--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -29,13 +29,15 @@
 	height: 99px;
 }
 
-body.admin-bar .Post > header {
-	top: 32px;
+@media screen and ( min-width: 600px ) and ( max-width: 782px ) {
+	body.admin-bar .Post > header {
+		top: 46px;
+	}
 }
 
-@media screen and ( max-width: 782px ) {
+@media screen and ( min-width: 783px ) {
 	body.admin-bar .Post > header {
-		top: 48px;
+		top: 32px;
 	}
 }
 
