--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -7,8 +7,8 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: rgba( 0, 0, 0, 0.2 );
 	z-index: 20;
+	pointer-events: none;
 }
 
 .Modal-inner {
@@ -22,4 +22,5 @@
 	box-shadow: 0 1px 3px rgba( 0, 0, 0, 0.3 );
 	border-radius: 4px;
 	overflow: auto;
+	pointer-events: initial;
 }
