Make mobile buttons less C H O N K Y

--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -59,6 +59,7 @@
 .Comment-footer-actions {
 	display: flex;
 	justify-content: space-between;
+	align-items: flex-start;
 	flex-wrap: wrap;
 	margin: 1.666rem 0 1.248rem;
 }
