--- a/src/components/Message/Header.css
+++ b/src/components/Message/Header.css
@@ -106,7 +106,7 @@
 		width: 24px !important;
 		height: 24px !important;
 	}
-	.Message-Header > .actions {
+	.Message-Header .Post__actions {
 		display: none;
 	}
 }
