--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -26,6 +26,7 @@
 	display: flex;
 	margin: 1.666rem 0 1.248rem;
 	justify-content: space-between;
+	align-items: flex-start;
 }
 
 .Post--collapsed .reactions {
