--- a/src/components/Sidebar/Pagination.css
+++ b/src/components/Sidebar/Pagination.css
@@ -2,6 +2,8 @@
 	display: flex;
 	align-items: baseline;
 	padding: 0 1em;
+	margin: 0;
+	border: none;
 	max-width: 20em;
 }
 
@@ -9,11 +11,8 @@
 	width: 50%;
 }
 
-.Sidebar-Pagination .cta {
-	font-size: inherit;
-}
-
-.Sidebar-Pagination .cta:after {
+.Sidebar-Pagination .icon {
+	height: 1em;
 	width: 1em;
 }
 
